--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -1,6 +1,6 @@
 <!-- <div class="container"> -->
 {{>header}}
-<div class="row procedure ">
+<div class="row marginAlign ">
 
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
 
@@ -190,10 +190,11 @@
 						<input type="hidden" name="action" value="second">
 						<textarea class="form-control" rows="5" placeholder="Case info" name="caseinfo" style="margin-top: 15px;border-radius:8px;"></textarea>
 
-						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+						<div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
+
 							<div class="panel panel-default" style="border:none;box-shadow:none;">
 								<div class="panel-heading" role="tab" id="headingOne" style="margin-top: 10px;padding: 10px 15px;">
-									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="outline:none;">
+									<a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
 												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -215,7 +216,7 @@
 
 							<div class="panel panel-default" style="border:none;box-shadow:none;">
 								<div class="panel-heading" role="tab" id="headingTwo" style="margin-top: 5px;padding: 10px 15px;">
-									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="outline:none;">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
 												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -237,7 +238,7 @@
 
 							<div class="panel panel-default" style="border:none;box-shadow:none;">
 								<div class="panel-heading" role="tab" id="headingThree" style="margin-top: 5px;padding: 10px 15px;">
-									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="outline:none;">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="outline:none;">
 										<h4 class="panel-title" style="color:black">
 											<div class="row">
 												<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
@@ -257,7 +258,34 @@
 									</div>
 								</div>
 							</div>
+
 						</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 						<div class="form-group">
 							<input type="text" name="name.full" class="form-control" id="name" placeholder="Name:" style="margin-top: -10px;">
 						</div>
