--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -1,4 +1,5 @@
 <!-- <div class="container"> -->
+
 {{>headerhome}}
 <div class="row procedure tryIndex">
 
@@ -35,27 +36,63 @@
 
 				<div class="item active ">
 
-					<img src="../images/GMTHomeRecovery1.jpg" style="width:100%;height:auto">
-
+					<img src="../images/GMTHomeCMain.jpg" style="width:100%;height:auto">
 					<div class="carousel-caption">
-						<h2 style="margin-top:0px; font-size:33px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-100px;text-shadow: 0 1px 3px rgba(0, 0, 0, 20);">The perfect place for a complete recovery</h2>
+
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">The perfect place for a complete recovery</h2>
+							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">Best priced healthcare </h2>
+							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> World class hospitality</h2>
+
+
 					</div>
+
+
 
 				</div>
 
 				<div class="item">
 					<img src="../images/GMTHomeWellness1.jpg" style="width:100%;height:auto;">
 
+
+					<div class="carousel-caption">
+
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">The perfect place for a complete recovery</h2>
+							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">Best priced healthcare </h2>
+							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> World class hospitality</h2>
+
+
+					</div>
+
 				</div>
 				<div class="item">
-					<img src="../images/GMTHomeYoga1.jpg" style="width:100%;height:auto;">
+					<img src="../images/GMTHomeCFamily1.jpg" style="width:100%;height:auto;">
+					<div class="carousel-caption">
 
+						<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;text-align:left;position:relative;left:-186px;top:-40px;">Combine your holiday with a health check up</h2>
+							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-45px;">	Customize your package </h2>
+							<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-50px;"> Explore the world of ayurveda </h2>
+							<!-- <h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;text-align:left;position:relative;left:-186px;top:-55px;"> 	 </h2> -->
+
+
+
+
+
+
+
+					</div>
 				</div>
 
 			</div>
 
 		</div>
+		<!-- <div class="carousel-caption" style="right: 72px; left:10px; padding-left: 200px; text-align: right;">
 
+			<h2 style="margin-top:0px; font-size:35px;font-family:SourceSansPro-Bold;">The perfect place for a complete recovery</h2>
+				<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Best priced healthcare </h2>
+				<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> World class hospitality</h2>
+
+			text-shadow: 0 1px 3px rgba(0, 0, 0, 20);
+		</div> -->
 		<!-- <div class="row">
 				<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12"></div>
 				<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
@@ -72,18 +109,18 @@
 	<script src="/js/image.js"></script>
 	<div class="row index_choose">
 		<p class="title">How You Choose</p>
-		<div class="row">
+		<div class="row" style="padding-bottom: 20px;">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail   " style="padding-left: 90px;border:none;">
-							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;  border-top-left-radius: 10px;border-top-right-radius: 10px;">
 								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " align="middle" style="" />
 							</div>
 							<!-- <img alt="Goa Medical Travel" src="/images/bariatrics.png" class="  " align="middle"
 							style="margin-bottom: 0px;width:20%;height:auto;border-color:rgb(83,200,171);" /> -->
-							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;">
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
 								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers dfyhrtf gj</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers fgjhg</p>
@@ -101,10 +138,10 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
 								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " style="" />
 							</div>
-							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;">
+							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
 								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
@@ -121,10 +158,10 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-right: 90px;border-color:rgb(255,255,255)">
-							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;">
+							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
 								<img alt="Goa Medical Travel" src="/images/selection(2).png" class="image  " style="" />
 							</div>
-							<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;">
+							<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
 								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
 								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
@@ -237,8 +274,8 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border:none;">
-								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:140px;height:140px;" />
+							<div style="border:none;padding-bottom: 20px;">
+								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:130px;height:130px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
 								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
@@ -257,8 +294,8 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border:none;">
-								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:140px;height:140px;" />
+							<div style="border:none;padding-bottom: 20px;">
+								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:130px;height:130px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
 								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
@@ -278,8 +315,8 @@
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
 						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border:none;">
-								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:140px;height:140px;" />
+							<div style="border:none;padding-bottom: 20px;">
+								<img alt="Goa Medical Travel" src="/images/dr-shekhar-salkar.jpg" class="image" align="middle" style="padding: 5px;border-radius:50%;width:130px;height:130px;" />
 							</div>
 							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171); border-radius:10px;font-family:SourceSansPro-Regular;">
 								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
