--- a/Gmt/templates/views/packages.hbs
+++ b/Gmt/templates/views/packages.hbs
@@ -1,3 +1,197 @@
 {{>header}}
-sdjhjk
+<div class="hero marginAlign ">
+	<div class="container">
+   <div class="row">
+    <div class="col-md-8 col-lg-8 col-sm-8 col-xs-12">
+   <div class="row pp">
+					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+					</div>
+					<div class="col-md-11 col-lg-11 col-sm-11 col-xs-12" style="padding-left: 0px;">
+						<h2 style="margin-left: -2px;">Meet The Doctors</h2>
+						<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
+						<div class="border_doc">&nbsp;</div>
+						<p>Choose the right doctor for your treatment</p>
+						<p>Consult a specialist for a second opinion</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-12">
+					</div>
+    <div class="col-md-10 col-lg-10 col-sm-10 col-xs-12 block">
+      <form role="form row" method="post">
+							<input type="hidden" name="action" value="testSearch">
+							<div class="form-group">
+								<div class="col-md-3 col-lg-3 col-sm-3 col-xs-12 " style="padding-top: 2px;">
+									<label id="proc" style="color:white">Area of Expertise:</label>
+								</div>
+								<div class="col-md-6 col-lg-6 col-sm-6 col-xs-12 " style="margin-bottom: 10px; margin-left:0px">
+
+									<input type="text" name="procedure" class="form-control" id="procedure" placeholder="Procedure" style="margin-left: -8px;">
+									<input type="hidden" id="procedureId" name="procedureId" value="">
+								</div>
+								<div class="col-md-3 col-lg-3 col-sm-3 col-xs-10  main_button">
+									<button type="submit" class="btn btn-primary btn-md rais" style="">
+										<span class="search_doc">Search Doctors</span>
+									</button>
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="col-md-1 col-lg-1 col-sm-1 col-xs-0"></div>
+				</div>
+			</div>
+
+			<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4"></div>
+		</div>
+
+	</div>
+</div>
+
+<div class="row procedure">
+<div class="col-lg-8 border no-padding">
+<div class="row provider-box">
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		<img class="provider-img" width="auto" height="auto" style="margin-top: 10px; margin-bottom: 10px;" src="../images/Manipal goa.jpg">
+</div>
+<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 provider-info">
+<h3 style="">name</h3>
+<p style="margin-top: 0px;">fdgrtfyhrfh</p>
+<p style="margin-top: 0px;">qwewfdc</p>
+</div>
+<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+<button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'"
+style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 0 4px 0 0 #b24b4d;margin-top:240px;">Know More</button>
+</div>
+</div>
+
+<div class="row provider-box">
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+		<img class="provider-img" width="auto" height="auto" style="margin-top: 10px; margin-bottom: 10px;" src="../images/Manipal goa.jpg">
+</div>
+<div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 provider-info">
+<h3 style="">name</h3>
+<p style="margin-top: 0px;">fdgrtfyhrfh</p>
+<p style="margin-top: 0px;"> qwewfdc</p>
+
+</div>
+<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+<button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'"
+style="outline:none;background-color: #ff6c6f;border-color: #ff6c6f;box-shadow: 0 4px 0 0 #b24b4d;margin-top:240px;">Know More</button>
+</div>
+</div></div>
+
+<div class="col-lg-4 no-padding">
+	<h4 class="specialities" style="">Long Term Package</h4>
+	<ul class="nav nav-stacked tabs">
+		<li role="presentation" class="active" style="margin-top: 0px;">
+			<a href="/providers/{{key}}" style="">
+				<div class="row">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+					</div>
+					<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="">
+						</div>
+						<div class="col-lg-9">
+							<span style="SourceSansPro-Regular;font-size:20px;">Recovery</span>
+						</div>
+					</div>
+				</a>
+			</li>
+
+      <li role="presentation" class="active" style="margin-top: 0px;">
+        <a href="/providers/{{key}}" style="">
+          <div class="row">
+            <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+            </div>
+            <div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+              <img src="">
+            </div>
+            <div class="col-lg-9">
+              	<span style="SourceSansPro-Regular;font-size:20px;">Wellness</span>
+            </div>
+          </div>
+        </a>
+      </li>
+
+			<li role="presentation" class="active" style="margin-top: 0px;">
+        <a href="/providers/{{key}}" style="">
+          <div class="row">
+            <div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+            </div>
+            <div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+              <img src="">
+            </div>
+            <div class="col-lg-9">
+            	<span style="SourceSansPro-Regular;font-size:20px;">Rejuvination</span>
+            </div>
+          </div>
+        </a>
+      </li>
+
+			<li role="presentation" class="active" style="margin-top: 0px;">
+				<a href="/providers/{{key}}" style="">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="">
+						</div>
+						<div class="col-lg-9">
+							<span style="SourceSansPro-Regular;font-size:20px;">Rehabilitation</span>
+						</div>
+					</div>
+				</a>
+			</li>
+
+				<h4 class="specialities" style="">Daily Packages</h4>
+
+			<li role="presentation" class="active" style="margin-top: 0px;">
+				<a href="/providers/{{key}}" style="">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="">
+						</div>
+						<div class="col-lg-9">
+							<span style="SourceSansPro-Regular;font-size:20px;">Total Body Checkups</span>
+						</div>
+					</div>
+				</a>
+			</li>
+
+			<li role="presentation" class="active" style="margin-top: 0px;">
+				<a href="/providers/{{key}}" style="">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="">
+						</div>
+						<div class="col-lg-9">
+							<span style="SourceSansPro-Regular;font-size:20px;">Ayurvedic Checkups</span>
+						</div>
+					</div>
+				</a>
+			</li>
+
+			<li role="presentation" class="active" style="margin-top: 0px;">
+				<a href="/providers/{{key}}" style="">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<img src="">
+						</div>
+						<div class="col-lg-9">
+							<span style="SourceSansPro-Regular;font-size:20px;">Dental Checkups</span>
+						</div>
+					</div>
+				</a>
+			</li>
+
+		</ul>
+	</div>
+
+</div>
 {{>footer}}
