--- a/Gmt/templates/views/profile.hbs
+++ b/Gmt/templates/views/profile.hbs
@@ -1,7 +1,5 @@
 {{>header}}
-<div class="container tryIndex">
-	<div class="row" style="height:113px; background-color:rgb(61,61,61) ">
-	</div>
+<div class="container marginAlign">
 	<div class="row">
 		<div class="col-xs-3">
 			<ul class="nav nav-tabs nav-stacked">
