--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -1,6 +1,6 @@
 <!-- <div class="container"> -->
 	{{>header}}
-<div class="row procedure">
+<div class="row marginAlign">
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
 
 
