--- a/Gmt/templates/views/providers.hbs
+++ b/Gmt/templates/views/providers.hbs
@@ -1,5 +1,7 @@
 <!-- <div class="container"> -->
 {{>header}}
+<div class="picture marginAlign">
+</div>
 <div class="row procedure">
 
 	<div class="col-lg-8 border no-padding">
