--- a/Gmt/templates/views/services.hbs
+++ b/Gmt/templates/views/services.hbs
@@ -1,6 +1,8 @@
 	{{>header}}
-	<div class="row">
-	<h3>Welcome Bhau</h3>
-	<input class="btn btn-primary btn-md raise " type="submit" value="View Complete Profile" style="outline:none;" onclick="location.href='/doctors'">
+	<div class="picture marginAlign">
+	</div>
+	<div class="row procedure">
+	<!-- <h3>Welcome Bhau</h3>
+	<input class="btn btn-primary btn-md raise " type="submit" value="View Complete Profile" style="outline:none;" onclick="location.href='/doctors'"> -->
 </div>
 {{>footer}}
