--- a/Gmt/templates/views/signup.hbs
+++ b/Gmt/templates/views/signup.hbs
@@ -1,5 +1,5 @@
 	{{>header}}
-	<div class="row procedure">
+	<div class="row marginAlign">
 		<div class="square">
 			<strong style="margin-left:20px;font-size:18px;">Sign Up</strong>
 			<form class="form-inline" method="post">
