--- a/Gmt/templates/views/verify.hbs
+++ b/Gmt/templates/views/verify.hbs
@@ -1,5 +1,5 @@
 	{{>header}}
-	<div class="row procedure">
+	<div class="row marginAlign">
 
 		<h3> Your Login is verified</h3>
 		<h2> Please click on Login to Proceed
