--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -5044,6 +5044,14 @@ button.close {
 .tabs .active {
   background-color: white; }
 
+.marginAlign {
+  overflow: hidden;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 112px; }
+  .marginAlign .border {
+    border-right: 1px solid #ededed; }
+
 .procedure {
   overflow: hidden;
   margin: 0; }
@@ -5222,6 +5230,14 @@ button.close {
     box-shadow: 0 4px 0 0 #df5f69;
     outline: none; }
 
+.connect {
+  border: 2px solid #d55f61;
+  border-radius: 5px;
+  margin-bottom: 0;
+  margin-top: 9px;
+  padding: 2px 12px;
+  color: #d55f61; }
+
 .post_img {
   height: auto;
   width: 50%;
@@ -5336,6 +5352,15 @@ a:focus {
   .panel-default .panel-title .accordion .price {
     padding-top: 5px;
     text-align: right; }
+  .panel-default .panel-title .accordion .btn-primary.procedure_btn {
+    background-color: #ff6c6f;
+    color: white;
+    font-size: 16px;
+    font-family: SourceSansPro-Regular;
+    height: auto;
+    padding: 1px 12px;
+    border-color: #ff6c6f;
+    box-shadow: 0 3px 0 0 #b24b4d; }
   .panel-default .panel-title .accordion .btn-primary.doc_btn {
     background-color: #53c8ab;
     color: white;
@@ -5409,7 +5434,7 @@ a:focus {
   color: #cdcaca; }
 
 .specialities {
-  background-color: #c6c6c6;
+  background-color: #2b2b2b;
   color: white;
   margin-top: 0;
   font-size: 18px;
@@ -5489,21 +5514,20 @@ a:focus {
   .btn-primary.rais .search_doc {
     font-size: 15px; }
 
-.connect {
-  font-family: SourceSansPro-Regular;
-  font-size: 16px;
-  padding: 1px 12px;
-  color: #ebebeb; }
-
 .qwe {
   padding-left: 0;
   padding-right: 0; }
 
+.panel-group .panel + .panel {
+  margin-top: 0; }
+
 .panel_doc {
   margin-top: -10px; }
   .panel_doc .panel_heading {
-    margin-top: -5px;
-    border-bottom: 2px solid #cac6c6; }
+    margin-top: 0;
+    border: 1px solid #cac6c6;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0; }
     .panel_doc .panel_heading .accordion_doc .pro {
       font-family: SourceSansPro-Regular;
       font-size: 16.5px; }
@@ -5529,8 +5553,8 @@ a:focus {
   -o-background-size: cover;
   background-size: cover; }
 
-.hero {
-  background: url("../images/Meet%20the%20Doctors.jpg") no-repeat center center;
+.picture {
+  background: url("../images/Specialities265(1).png") no-repeat center center;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -5539,7 +5563,19 @@ a:focus {
   display: table;
   width: 100%;
   position: relative;
-  height: 447px; }
+  height: 265px; }
+
+.hero {
+  background: url("../images/MeetTheDoctors26501.jpg") no-repeat center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: table;
+  width: 100%;
+  position: relative;
+  height: 265px; }
   .hero .container {
     position: absolute;
     bottom: 0;
@@ -5548,21 +5584,17 @@ a:focus {
     display: table-cell;
     text-align: left; }
     .hero .container .pp {
-      padding-bottom: 11px;
-      margin-bottom: 40px; }
-      .hero .container .pp .border_doc {
-        border-bottom: 5px solid #ff6c6f;
-        width: 10%;
-        margin-top: -15px;
-        margin-bottom: 10px; }
+      padding-bottom: 35px; }
     .hero .container h2 {
-      font-family: SourceSansPro-Semibold;
-      font-size: 45px;
-      margin-bottom: 0; }
-    .hero .container p {
-      font-size: 20px;
+      font-family: SourceSansPro-Bold;
+      font-size: 34px;
       margin-bottom: 0;
-      font-family: SourceSansPro-Regular; }
+      color: white;
+      padding-bottom: 10px; }
+    .hero .container p {
+      font-size: 18px;
+      margin-bottom: 0;
+      font-family: SourceSansPro-Semibold; }
     .hero .container .form-group {
       padding: 0 0 0 15px; }
       .hero .container .form-group .form-control {
@@ -5577,7 +5609,7 @@ a:focus {
         font-weight: 300;
         padding-top: 4px; }
     .hero .container .block {
-      background-color: #c6c6c6;
+      background-color: rgba(0, 0, 0, 0.3);
       padding: 5px 15px; }
 
 .tryIndex {
