--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -15,7 +15,6 @@ $icon-font-path: "../fonts/";
 				font-family: SourceSansPro-Semibold;
 				src: url(../fonts/SourceSansPro-Semibold.otf);
 }
-
 // The easiest way to customise Bootstrap variables while
 // being able to easily override the source files with new
 // versions is to override the ones you want in another file.
@@ -23,7 +22,6 @@ $icon-font-path: "../fonts/";
 // You can also add your own custom variables to this file for
 // use in your site stylesheets.
 @import "site/variables";
-
 // Site Styles
 // ===========
 // Add your own site style includes here
@@ -31,8 +29,6 @@ $icon-font-path: "../fonts/";
 .no-padding {
 				padding: 0;
 }
-
-
 .exp {
 				border: 1px solid rgb(202,198,198);
 				margin-left: 15px;
@@ -85,18 +81,15 @@ $icon-font-path: "../fonts/";
 								}
 				}
 }
-
 .provider-box {
 				border-bottom: 1px solid #e5e5e5;
 				width: 100%;
 				margin-left: 2px;
-
 				// margin-bottom: 20px;
 }
 .provider-img {
 				padding: 20px;
 				border-radius: 8px;
-
 				// width: 350px;
 				// height: 300px;
 }
@@ -138,7 +131,6 @@ $icon-font-path: "../fonts/";
 }
 .navbar-default {
 				background-color: #ededed;
-
 				// background-color: rgb(232,232,232);
 				border-radius: 0;
 				li {
@@ -162,7 +154,6 @@ $icon-font-path: "../fonts/";
 								font-size: 20px;
 								padding-top: 10px;
 								padding-bottom: 10px;
-
 								// box-shadow: 0 5px 0 #cac6c6;
 								border-bottom: 2px solid #cac6c6;
 				}
@@ -171,8 +162,16 @@ $icon-font-path: "../fonts/";
 				}
 				.active {
 								background-color: white;
-
 								// margin-left: -2px;
+				}
+}
+.marginAlign {
+				overflow: hidden;
+				margin-left: 0;
+				margin-right: 0;
+				margin-top: 112px;
+				.border {
+								border-right: 1px solid #ededed;
 				}
 }
 .procedure {
@@ -210,7 +209,6 @@ $icon-font-path: "../fonts/";
 #bio {
 				font-size: 16px;
 				margin-top: 45px;
-
 				// border-bottom: 2px solid #e5e5e5;
 				padding-bottom: 40px;
 				margin-left: -40px;
@@ -277,7 +275,6 @@ $icon-font-path: "../fonts/";
 #link {
 				border: 1px solid #53c8ab;
 				color: #53c8ab;
-
 				// border-radius: 4px;
 				padding: 1px 10px;
 				position: relative;
@@ -294,7 +291,6 @@ $icon-font-path: "../fonts/";
 								font-family: SourceSansPro-Regular;
 								font-size: 16px;
 								color: white;
-
 								// padding: 10px;
 				}
 }
@@ -370,7 +366,6 @@ $icon-font-path: "../fonts/";
 												padding: 8px 0 0 8px;
 												border: 1px solid #ccc;
 								}
-
 								// .dropdown {
 								// 				margin-left: 20px;
 								// 				width: 100px;
@@ -390,17 +385,17 @@ $icon-font-path: "../fonts/";
 								font-family: SourceSansPro-Regular;
 								box-shadow: 0 4px 0 0 rgb(223,95,105);
 								outline: none;
-
 								// box-shadow: 0 2px 0 0 rgb(223,95,105);
 				}
 }
-
-// .connect {
-// 				border: 2px solid #d55f61;
-// 				border-radius: 5px;
-// 				margin-bottom: 0;
-// 				margin-top: 9px;
-// }
+.connect {
+				border: 2px solid #d55f61;
+				border-radius: 5px;
+				margin-bottom: 0;
+				margin-top: 9px;
+				padding: 2px 12px;
+				color: #d55f61;
+}
 .post_img {
 				height: auto;
 				width: 50%;
@@ -473,7 +468,6 @@ a:focus {
 }
 #education,
 #awards {
-
 				// margin-left: -32px;
 				// border-top:2px solid #e5e5e5;
 				// width:770px;
@@ -490,19 +484,17 @@ a:focus {
 				box-shadow: 0 4px 0 0 rgb(223,95,105);
 				border-color: rgb(255,108,111);
 }
-
-.provider_procedures{
-	.btn-primary.procedure_btn {
-					background-color: #ff6c6f;
-					color: white;
-					font-size: 16px;
-					font-family: SourceSansPro-Regular;
-					height: auto;
-					padding: 1px 12px;
-					border-color: #ff6c6f;
-					box-shadow: 0 3px 0 0 #b24b4d;
-	}
-
+.provider_procedures {
+				.btn-primary.procedure_btn {
+								background-color: #ff6c6f;
+								color: white;
+								font-size: 16px;
+								font-family: SourceSansPro-Regular;
+								height: auto;
+								padding: 1px 12px;
+								border-color: #ff6c6f;
+								box-shadow: 0 3px 0 0 #b24b4d;
+				}
 }
 .btn-primary.enquire {
 				box-shadow: 0 4px 0 0 rgb(223,95,105);
@@ -511,9 +503,7 @@ a:focus {
 				width: 50%;
 				height: auto;
 }
-.spec {
-
-}
+.spec {}
 .doc_proc {
 				padding-bottom: 20px;
 				.doc_border {
@@ -548,7 +538,16 @@ a:focus {
 																padding-top: 5px;
 																text-align: right;
 												}
-
+												.btn-primary.procedure_btn {
+																background-color: #ff6c6f;
+																color: white;
+																font-size: 16px;
+																font-family: SourceSansPro-Regular;
+																height: auto;
+																padding: 1px 12px;
+																border-color: #ff6c6f;
+																box-shadow: 0 3px 0 0 #b24b4d;
+												}
 												.btn-primary.doc_btn {
 																background-color: #53c8ab;
 																color: white;
@@ -586,7 +585,6 @@ a:focus {
 .autocomplete-suggestions strong {
 				font-weight: normal;
 				color: rgb(255,108,111);
-
 				// color: #39f;
 }
 .autocomplete-group {
@@ -613,13 +611,11 @@ a:focus {
 								font-size: 16px;
 				}
 				 :-ms-input-placeholder {
-
 								// color: red;
 								font-family: SourceSansPro-Regular;
 								font-size: 16px;
 				}
 }
-
 // .jumbotron {
 // 				background-image: url("../images/Meet the Doctors.jpg");
 // 				width: 100%;
@@ -658,7 +654,7 @@ a:focus {
 				color: #cdcaca;
 }
 .specialities {
-				background-color: rgb(198, 198,198);
+				background-color: rgb(43,43,43);
 				color: white;
 				margin-top: 0;
 				font-size: 18px;
@@ -670,7 +666,6 @@ a:focus {
 .doctor {
 				padding-left: 25px;
 				.thumbnail {
-
 								// border-bottom-width: 1px;
 								margin-top: 30px;
 								height: auto;
@@ -713,9 +708,7 @@ a:focus {
 								width: 50%;
 								height: auto;
 				}
-
 }
-
 .thumbnail>p {
 				font-family: SourceSansPro-Semibold;
 				text-align: center;
@@ -752,27 +745,32 @@ a:focus {
 								font-size: 15px;
 				}
 }
-.connect {
-
-				// background-color: #ff6c6f;
-				// border-color: #ff6c6f;
-				// box-shadow: 0 2px 0 0 #B24B4D;
-				font-family: SourceSansPro-Regular;
-				font-size: 16px;
-				padding: 1px 12px;
-				color: rgb(235,235,235);
-
-				// width:80px;
-}
+// .connect {
+//
+// 				// background-color: #ff6c6f;
+// 				// border-color: #ff6c6f;
+// 				// box-shadow: 0 2px 0 0 #B24B4D;
+// 				font-family: SourceSansPro-Regular;
+// 				font-size: 16px;
+// 				padding: 1px 12px;
+// 				;
+//
+// 				// width:80px;
+// }
 .qwe {
 				padding-left: 0;
 				padding-right: 0;
 }
+.panel-group .panel + .panel {
+				margin-top: 0;
+}
 .panel_doc {
 				margin-top: -10px;
 				.panel_heading {
-								margin-top: -5px;
-								border-bottom: 2px solid #cac6c6;
+								margin-top: 0;
+								border: 1px solid #cac6c6;
+								border-top-left-radius: 0;
+								border-top-right-radius: 0;
 								.accordion_doc {
 												.pro {
 																font-family: SourceSansPro-Regular;
@@ -792,7 +790,6 @@ a:focus {
 				-o-background-size: cover;
 				background-size: cover;
 				display: table;
-
 				// margin-top: 100px;
 				width: 100%;
 				height: 447px;
@@ -805,7 +802,6 @@ a:focus {
 				-o-background-size: cover;
 				background-size: cover;
 }
-
 // hr.style17 {
 // 	border-top: 1px solid #8c8b8b;
 // 	text-align: center;
@@ -816,8 +812,8 @@ a:focus {
 //
 //
 // }
-.hero {
-				background: url("../images/Meet%20the%20Doctors.jpg")no-repeat center center;
+.picture {
+				background: url("../images/Specialities265(1).png")no-repeat center center;
 				background-repeat: no-repeat;
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
@@ -826,33 +822,45 @@ a:focus {
 				display: table;
 				width: 100%;
 				position: relative;
-				height: 447px;
+				height: 265px;
+}
+.hero {
+				background: url("../images/MeetTheDoctors26501.jpg")no-repeat center center;
+				background-repeat: no-repeat;
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
+				display: table;
+				width: 100%;
+				position: relative;
+				height: 265px;
 				.container {
 								position: absolute;
 								bottom: 0;
 								left: 0;
 								width: 100%;
 								.pp {
-
 												// padding-left: 20px;
-												padding-bottom: 11px;
-												margin-bottom: 40px;
-												.border_doc {
-																border-bottom: 5px solid #ff6c6f;
-																width: 10%;
-																margin-top: -15px;
-																margin-bottom: 10px;
-												}
+												padding-bottom: 35px;
+												// .border_doc {
+												// 				border-bottom: 4px solid #ff6c6f;
+												// 				width: 10%;
+												// 				margin-top: -15px;
+												// 				margin-bottom: 10px;
+												// }
 								}
 								h2 {
-												font-family: SourceSansPro-Semibold;
-												font-size: 45px;
+												font-family: SourceSansPro-Bold;
+												font-size: 34px;
 												margin-bottom: 0;
+												color: white;
+												padding-bottom: 10px;
 								}
 								p {
-												font-size: 20px;
+												font-size: 18px;
 												margin-bottom: 0;
-												font-family: SourceSansPro-Regular;
+												font-family: SourceSansPro-Semibold;
 								}
 								.form-group {
 												padding: 0 0 0 15px;
@@ -873,7 +881,7 @@ a:focus {
 								display: table-cell;
 								text-align: left;
 								.block {
-												background-color: rgb(198,198,198);
+												background-color: rgba(0, 0, 0, 0.3);
 												padding: 5px 15px;
 								}
 				}
@@ -890,7 +898,6 @@ a:focus {
 				width: 100%;
 				top: 220px;
 				.pp {
-
 								// padding-left: 20px;
 								padding-bottom: 11px;
 								margin-bottom: 40px;
@@ -923,7 +930,6 @@ a:focus {
 								margin-bottom: 0;
 								color: rgb(43,43,43);
 				}
-
 				// color: #FFF;
 }
 .hero1 {
@@ -935,7 +941,6 @@ a:focus {
 				background-size: cover;
 				display: table;
 				width: 100%;
-
 				// position: absolute;
 				// top: 114px;
 				height: 447px;
@@ -959,7 +964,6 @@ a:focus {
 																				border-bottom: 5px solid #ff6c6f;
 																				width: 25%;
 																				margin: -15px auto 0;
-
 																				// margin-top: -15px;
 																				// margin-bottom: 10px;
 																				// margin-left:220px;
@@ -980,7 +984,6 @@ a:focus {
 																				display: block;
 																}
 																.main_button {
-
 																				// margin: 0 auto;
 																				// display: block;
 																				.btn-primary.rais {
@@ -993,7 +996,6 @@ a:focus {
 																								.search_doc {
 																												font-size: 18px;
 																												font-family: SourceSansPro-Semibold;
-
 																												// width: 100%;
 																								}
 																				}
@@ -1007,7 +1009,6 @@ a:focus {
 								display: none;
 				}
 				.doctor {
-
 								// width: 271px;
 								.thumbnail {
 												height: 321px;
@@ -1020,7 +1021,6 @@ a:focus {
 				.hero .container .form-group #proc {
 								text-align: center;
 								margin: 0 auto;
-
 								// margin-left: 200px;
 				}
 }
