--- a/Gmt/templates/views/login.hbs
+++ b/Gmt/templates/views/login.hbs
@@ -1,5 +1,5 @@
 {{>header}}
-<div class="row procedure">
+<div class="row marginAlign">
 	<!-- <div class="box"> -->
 	<div class="row box">
 		<div class="col-sm-6">
