--- a/Gmt/templates/views/partials/header.hbs
+++ b/Gmt/templates/views/partials/header.hbs
@@ -1,6 +1,6 @@
 <div id="header" style="margin-top:0px;">
 	<!-- <div class="container"> -->
-	<div role="navigation" class="navbar navbar-inverse" style="border-width: 0px;border-radius:0px;background-color:rgb(43,43,43);border-bottom:0px;">
+	<div role="navigation" class="navbar navbar-inverse navbar-fixed-top " style="border-width: 0px;border-radius:0px;background-color:rgb(43,43,43);border-bottom:0px;">
 
 		<div class="container-fluid">
 
@@ -28,28 +28,28 @@
 					<div class="row">
 						<div class="col-lg-11">
 							<div class="row">
-								<div class="collapse navbar-collapse">
+								<div class="collapse navbar-collapse" style="padding-right: 0px;">
 									<ul class="nav navbar-nav navbar-right">
 										{{# each navs}}
-										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
-											<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgb(43,43,43);">{{ label }}</a>
-										</li>
-										{{/each}}
+											<li {{#ifeq ../section key}} class="active" {{else}} {{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;">
+												<a href="{{ href }}" style="color:rgb(235,235,235);;background-color:rgb(43,43,43);">{{ label }}</a>
+											</li>
+											{{/each}}
 									</ul>
 								</div>
 							</div>
-							<div class="row" style="padding-top: 10px;">
+							<div class="row" style="padding-top: 10px;margin-right: 0px;">
 								<div class="collapse navbar-collapse">
 									<ul class="nav navbar-nav navbar-right">
 										{{# each navLinks}}
-										<li {{#ifeq ../section key}}class="active" {{else}}{{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
-											<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgb(43,43,43);">{{ label }}</a>
-										</li>
-										{{/each}}
-										<!-- <li style="padding-left:35px;">
-											<button type="submit" class="btn btn-primary btn-md connect" style="margin-top:10px;	">connect</button>
-										</li> -->
-										<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
+											<li {{#ifeq ../section key}} class="active" {{else}} {{/ifeq}} style="font-family: SourceSansPro-Regular;font-size:16.5px;padding-left:20px;">
+												<a href="{{ href }}" style="outline:none;color:rgb(235,235,235);background-color:rgb(43,43,43);">{{ label }}</a>
+											</li>
+											{{/each}}
+											<li style="padding-left:35px;">
+												<button type="submit" class=" btn-md connect" style="background-color:rgba(0,0,0,0.0);font-family:SourceSansPro-Regular;font-size:16.5px;">connect</button>
+											</li>
+											<!-- background-color: #ff6c6f;	border-color:#ff6c6f;	box-shadow: 0 3px 0 0 #B24B4D;outline:none; -->
 									</ul>
 								</div>
 							</div>
