--- a/Gmt/templates/views/post.hbs
+++ b/Gmt/templates/views/post.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container marginAlign">
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 			<article>
@@ -17,7 +17,7 @@
 				<div class="post">
 					{{{data.post.content.extended}}}
 				</div>
- 
+
 			</article>
 		</div>
 	</div>
