--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -1,10 +1,26 @@
 <!-- <div class="container"> -->
 	{{>header}}
-<div class="row procedure">
+	<div class="row marginAlign picture">
+		<div class="row" style="padding-top:205px;">
+			<div class="col-md-4 col-lg-4 col-sm-4 col-xs-4">
+				<div class="row">
+			<div class="col-md-2 col-lg-2 col-sm-2 col-xs-2">
+			</div>
+      <div class="col-md-10 col-lg-10 col-sm-10 col-xs-12" style="padding-left:12px;">
+			<span style="font-size:30px;font-family:SourceSansPro-Semibold;color:white">	{{{specialityn}}}</span>
+			</div>
+
+
+		</div>
+		</div>
+	</div>
+			<!-- <img src="../images/Specialities250.png" style="height:auto;width:100%;"> -->
+	</div>
+<div class="row procedure ">
 
 	<!-- row starts-->
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
-		<img src="../images/cancercare1.jpg" style="height:auto;width:100%;">
+		<!-- <img src="../images/cancercare1.jpg" style="height:auto;width:100%;"> -->
 		<div class="scrolls" data-spy="scroll" data-target="#navbar-example">
 			<nav class="navbar navbar-default">
 				<ul class="nav navbar-nav row" style="padding-top: 8px;">
@@ -20,7 +36,7 @@
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
 				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 para">
-					{{{speciality}}}
+					{{{specialityd}}}
 				</div>
 				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 				</div>
